[package]
name = "bf4-chatlogger"
version = "0.1.0"
authors = ["Razer2015 <razer138@gmail.com>"]
description = "Integrations between BF4 server and Discord."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1"
chrono = "0.4"
chrono-tz = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
anyhow = { version = "1.0" }
battlefield_rcon = { git = "https://github.com/Kiiyya/battlefield_rcon", branch = "main" }
ascii = { version = "1.0.0", features = ["serde"] }
webhook = "2.1.1"

# Logging
log = "0.4"
flexi_logger = { version = "0.17", features = ["colors"] }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
